# watchn

./: .travis.yml  Makefile  README.md  watchn.cabal
app/: Main.hs
src/: Watcher.hs
